Adding categories controller and testing and doc
