# app/models/book.rb
@@ -3,6 +3,11 @@ class Book < ApplicationRecord
   # Validations
   validates :title, :author, :isbn, presence: true
   validates :isbn, uniqueness: true
+  validates :published_date, presence: true
+
+  # Associations
+  has_many :categorizations
+  has_many :categories, through: :categorizations
 
   def self.create_with_params(params)
     book = new(params)
